syntax = "proto3";

option csharp_namespace = "HW1.Api.Grpc";

package telegram_service;

import "google/protobuf/empty.proto";

service TelegramService {
  rpc SendMessage (SendMessageRequest) returns (MessageResponse);
  rpc GetUserInfo (GetTelegramUserRequest) returns (TelegramUserResponse);
  rpc BroadcastMessage (BroadcastMessageRequest) returns (stream BroadcastProgress);
  rpc GetBotStats (google.protobuf.Empty) returns (BotStatsResponse);
}

message SendMessageRequest {
  int64 chat_id = 1;
  string message = 2;
  optional string parse_mode = 3;
}

message GetTelegramUserRequest {
  int64 telegram_user_id = 1;
}

message BroadcastMessageRequest {
  string message = 1;
}

message TelegramUserResponse {
  int64 telegram_user_id = 1;
  string username = 2;
  string first_name = 3;
  string last_name = 4;
  string registered_at = 5;
  string last_activity = 6;
  bool is_active = 7;
  optional string system_user_id = 8;
}

message MessageResponse {
  bool success = 1;
  string message_id = 2;
  optional string error = 3;
}

message BotStatsResponse {
  int32 total_messages_today = 1;
  int32 active_users_24h = 2;
  double error_rate = 3;
  map<string, int32> commands_distribution = 4;
}

message BroadcastProgress {
  int32 total_users = 1;
  int32 processed_users = 2;
  int32 successful = 3;
  int32 failed = 4;
}